# catalytic

./: .gitignore  build_release.sh  debug_log.txt  entitlements.plist  full_crash_log.txt  run_integration_tests.sh  verification_log.txt
CatalyticKit/: CatalyticKit.slnx
catalytic-engine/: .gitignore  Cargo.toml  cbindgen.toml
catalytic-engine/src/: error.rs  lib.rs
catalytic-engine/src/checker/: bit.rs  compare.rs  contains.rs  expression.rs  mod.rs  range.rs  threshold.rs
catalytic-engine/src/core/: engine.rs  executor.rs  mod.rs  slot.rs  state.rs  task.rs
catalytic-engine/src/ffi/: callback.rs  config.rs  control.rs  device.rs  engine.rs  helpers.rs  mod.rs  result.rs  slot.rs  step.rs  submit.rs  types.rs
catalytic-engine/src/model/: device.rs  mod.rs  result.rs  status.rs  step.rs  variable.rs
catalytic-engine/src/parser/: jsonpath.rs  mod.rs  number.rs  regex_parser.rs
catalytic-engine/src/storage/: mod.rs  redb_store.rs
catalytic-engine/src/ui/: log.rs  mod.rs  report.rs  snapshot.rs
catalytic-engine/tests/: e2e_test.rs  integration_extended.rs  integration_full_flow.rs
catalytic-service/: .gitignore  Catalytic.slnx  simulator.py
catalyticui/: .gitignore  settings.gradle.kts
docs/: COMPOSE_UI_TESTING_GUIDE.md  DATA_STRUCTURE_ALIGNMENT.md  ENGINE_BUSINESS_LOGIC.md  ENGINE_DEVELOPER_GUIDE.md  HOST_DESIGN.md  IMPLEMENTATION_ROADMAP.md  MEMORY_BANK.md  PLUGIN_DEVELOPER_GUIDE.md  PLUGIN_SYSTEM.md  PROJECT_BLUEPRINT.md  README.md  RED_TEAM_ATTACK.md  TECH_DOC_ENGINE.md  TECH_DOC_HOST.md  TECH_DOC_UI.md  VCM_ANALYSIS.md  VCM_REALITY_CHECK.md  (+4 more)
(+139 files in other folders)
